@@ -128,4 +128,20 @@ class DeprecationTest < Test::Unit::TestCase
   def test_deprecation_with_explicit_message
     assert_deprecated(/you now need to do something extra for this one/) { @dtc.d }
   end
+
+  def test_assertion_failed_error_doesnt_spout_deprecation_warnings
+    error_class = Class.new(StandardError) do
+      def message
+        ActiveSupport::Deprecation.warn 'warning in error message'
+        super
+      end
+    end
+
+    raise error_class.new('hmm')
+
+  rescue => e
+    error = Test::Unit::Error.new('testing ur doodz', e)
+    assert_not_deprecated { error.message }
+    assert_nil @last_message
+  end
 end
